<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.SingUp">

  <TextView
      android:id="@+id/signUp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/chat_app"
      android:textColor="@color/teal_200"
      android:textSize="@dimen/_30sdp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.142" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:layout_marginBottom="564dp"
      android:gravity="start"
      android:paddingStart="@dimen/_200sdp"
      android:paddingEnd="@dimen/_10ssp"
      android:text="@string/singup"
      android:textColor="@color/teal_200"
      android:textSize="@dimen/_15ssp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signUp"
      app:layout_constraintVertical_bias="1.0" />

  <EditText
      android:id="@+id/SignUserName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="20dp"
      android:autofillHints="User name"
      android:ems="10"
      android:hint="@string/name"
      android:inputType="textPersonName"
      android:minHeight="48dp"
      android:paddingStart="@dimen/_30sdp"
      android:paddingTop="@dimen/_minus30sdp"
      android:paddingEnd="@dimen/_10sdp"
      android:singleLine="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />
  <EditText
      android:id="@+id/SignUserEmail"
      android:layout_width="match_parent"
      android:layout_height="51dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="23dp"
      android:layout_marginEnd="20dp"
      android:ems="10"
      android:hint="Email"
      android:inputType="textEmailAddress"
      android:paddingStart="@dimen/_30sdp"
      android:paddingTop="@dimen/_minus30sdp"
      android:paddingEnd="@dimen/_10sdp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/SignUserName" />


  <EditText
      android:id="@+id/SignUserPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="20dp"
      android:autofillHints="Password"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:paddingStart="@dimen/_30sdp"
      android:paddingTop="@dimen/_minus30sdp"
      android:paddingEnd="@dimen/_10sdp"
      android:singleLine="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/SignUserEmail" />

  <Button
      android:id="@+id/button2"
      android:layout_width="200dp"
      android:layout_height="51dp"
      android:layout_marginStart="106dp"
      android:layout_marginTop="11dp"
      android:layout_marginEnd="106dp"
      android:background="#49DAEC"
      android:text="@string/singup"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progressBar"
      tools:ignore="MissingConstraints" />

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="181dp"
      android:layout_marginTop="69dp"
      android:layout_marginEnd="182dp"
      android:layout_marginBottom="11dp"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@+id/button2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/SignUserPassword" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="42dp"
      android:layout_marginEnd="184dp"
      android:text="TextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>